Fix: Stop flickering issue on Chrome

--- a/src/components/FeaturedProjects/index.scss
+++ b/src/components/FeaturedProjects/index.scss
@@ -55,7 +55,6 @@
     height: 100%;
     border-radius: 5px;
     object-fit: cover;
-    mix-blend-mode: multiply;
     filter: grayscale(100%) brightness(90%);
   }
 
